// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar-group #render should render component as expected (1) 1`] = `
<gux-avatar-group-beta avatar-limit="4">
  <template shadowrootmode="open">
    <div aria-label="avatar groups" class="gux-avatar-group" role="list">
      <gux-avatar-list-item-beta focusable="">
        <gux-avatar-beta accent="1" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-list-item-beta>
        <gux-avatar-beta accent="2" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-list-item-beta>
        <gux-avatar-beta accent="3" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-list-item-beta>
        <gux-avatar-beta accent="4" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-overflow-beta count="6">
        <gux-avatar-list-item-beta layout="plus-name">
          <gux-avatar-beta accent="5" label="" size="xsmall"></gux-avatar-beta>
        </gux-avatar-list-item-beta>
        <gux-avatar-list-item-beta layout="plus-name">
          <gux-avatar-beta accent="6" label="" size="xsmall"></gux-avatar-beta>
        </gux-avatar-list-item-beta>
        <gux-avatar-list-item-beta layout="plus-name">
          <gux-avatar-beta accent="7" label="" size="xsmall"></gux-avatar-beta>
        </gux-avatar-list-item-beta>
        <gux-avatar-list-item-beta layout="plus-name">
          <gux-avatar-beta accent="8" label="" size="xsmall"></gux-avatar-beta>
        </gux-avatar-list-item-beta>
        <gux-avatar-list-item-beta layout="plus-name">
          <gux-avatar-beta accent="9" label="" size="xsmall"></gux-avatar-beta>
        </gux-avatar-list-item-beta>
        <gux-avatar-list-item-beta layout="plus-name">
          <gux-avatar-beta accent="10" label="" size="xsmall"></gux-avatar-beta>
        </gux-avatar-list-item-beta>
      </gux-avatar-overflow-beta>
    </div>
  </template>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="Conor Darcy"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="Daragh King"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="Gavin Everett"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="Jason Evans"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="JR Stith"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="Katie Bobbe"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="Thomas Dillon"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="Dorka Hajnal"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="Memo Lopez"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <button>
      <gux-avatar-beta name="Monse Garcia Limon"></gux-avatar-beta>
    </button>
  </gux-avatar-focusable-beta>
</gux-avatar-group-beta>
`;

exports[`gux-avatar-group #render should render component as expected (2) 1`] = `
<gux-avatar-group-beta>
  <template shadowrootmode="open">
    <div aria-label="avatar groups" class="gux-avatar-group" role="list">
      <gux-avatar-list-item-beta focusable="">
        <gux-avatar-beta accent="1" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-list-item-beta>
        <gux-avatar-beta accent="2" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-list-item-beta>
        <gux-avatar-beta accent="3" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-list-item-beta>
        <gux-avatar-beta accent="4" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-list-item-beta>
        <gux-avatar-beta accent="5" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-list-item-beta>
        <gux-avatar-beta accent="6" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-list-item-beta>
        <gux-avatar-beta accent="7" label="" size="small"></gux-avatar-beta>
      </gux-avatar-list-item-beta>
      <gux-avatar-overflow-beta count="3">
        <gux-avatar-list-item-beta layout="plus-name">
          <gux-avatar-beta accent="8" label="" size="xsmall"></gux-avatar-beta>
        </gux-avatar-list-item-beta>
        <gux-avatar-list-item-beta layout="plus-name">
          <gux-avatar-beta accent="9" label="" size="xsmall"></gux-avatar-beta>
        </gux-avatar-list-item-beta>
        <gux-avatar-list-item-beta layout="plus-name">
          <gux-avatar-beta accent="10" label="" size="xsmall"></gux-avatar-beta>
        </gux-avatar-list-item-beta>
      </gux-avatar-overflow-beta>
    </div>
  </template>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Conor Darcy"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Daragh King"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Gavin Everett"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Jason Evans"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="JR Stith"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Katie Bobbe"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Thomas Dillon"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Dorka Hajnal"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Memo Lopez"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
  <gux-avatar-focusable-beta>
    <a href="www.google.com" target="_blank">
      <gux-avatar-beta name="Monse Garcia Limon"></gux-avatar-beta>
    </a>
  </gux-avatar-focusable-beta>
</gux-avatar-group-beta>
`;
